--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+table{
+  margin: 20px;
+  border-collapse: collapse;
+}
+
+table th, td{
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+}
