--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@ table th, td{
   padding: 5px;
   text-align: center;
 }
+
+.action-buttons{
+  display: flex;
+  justify-content: space-around;
+}
